force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/Territory_Based_Sharing_Config__mdt.object-meta.xml
<CustomObject>
    <label>Territory Based Sharing Config</label>
    <pluralLabel>Territory Based Sharing Configs</pluralLabel>
</CustomObject>