force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean field determining if territory sharing for this object will be executed. 

Disabled to turn it off in case of planned bulk data load.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>