force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Eligible_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Record_Types__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Semi-colon delimited list of record types eligible for Territory-based sharing</description>
    <label>Eligible Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>