force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Excluded_Users__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Users__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Usernames that will be excluded from real time Territory Sharing. Eg. &quot;unica.integration@anzx.com;adobe.integration@anzx.com&quot;</description>
    <label>Excluded Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>