force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/IsParentIdField__c.field-meta.xml
<CustomField>
    <fullName>IsParentIdField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if the sharing object uses ParentId or &lt;object&gt;Id as the parent field.</description>
    <label>IsParentIdField</label>
    <type>Checkbox</type>
</CustomField>