force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Fields__c</fullName>
    <description>This field will hold semi-colon delimited list of API names of fields the child object can lookup to.</description>
    <label>Lookup Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>