force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>API of the Object for Territory-based sharing</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>