force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Recalculation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Recalculation_Timeframe__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Time window in hours for record recalculation. Default to 24.</description>
    <label>Recalculation Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>