force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Row_Cause__c.field-meta.xml
<CustomField>
    <fullName>Row_Cause__c</fullName>
    <label>Row Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>