force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Sharing_Object__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Object__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>API Name of the Sharing Object</description>
    <label>Sharing Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>