force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Sharing_Scope__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Scope__c</fullName>
    <description>This picklist field define the sharing scope for sobject records</description>
    <label>Sharing Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory</fullName>
                <default>true</default>
                <label>Territory</label>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Parent Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>