force-app/main/default/objects/Territory_Based_Sharing_Config__mdt/fields/Territory_Field__c.field-meta.xml
<CustomField>
    <fullName>Territory_Field__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>API of the Territory field driving Territory-based sharing</description>
    <label>Territory Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>